# zipkin-cpp-opentracing

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  zipkin-cpp-opentracing-devel.spec  zipkin-cpp-opentracing.spec
.circleci/: config.yml
ci/: BUILD.curl  WORKSPACE  build_plugin.sh  do_ci.sh  install_bazel.sh  install_dependencies.sh  release.sh
include/zipkin/: ip_address.h  opentracing.h
scripts/: run_clang_format.sh
src/: address.cc  address.h  hex.cc  hex.h  ip_address.cc  opentracing.cc  optional.h  singleton.h  span_buffer.cc  span_buffer.h  span_context.cc  span_context.h  tracer.cc  tracer.h  tracer_interface.h  transporter.h  utility.cc  utility.h  zipkin_core_constants.h  zipkin_core_types.cc  zipkin_core_types.h  zipkin_http_transporter.cc  zipkin_http_transporter.h  zipkin_reporter_impl.cc  zipkin_reporter_impl.h
test/: tracer_test.cc
zipkin/: CMakeLists.txt
zipkin/include/zipkin/: flags.h  hex.h  ip_address.h  span_context.h  trace_id.h  tracer.h  utility.h  zipkin_core_types.h
zipkin/src/: hex.cc  ip_address.cc  span_buffer.h  span_context.cc  tracer.cc  utility.cc  zipkin_core_constants.h  zipkin_core_types.cc  zipkin_http_transporter.cc  zipkin_http_transporter.h  zipkin_json_field_names.h  zipkin_reporter_impl.cc  zipkin_reporter_impl.h
zipkin/test/: CMakeLists.txt  hex_test.cc  tracer_test.cc
zipkin_opentracing/: CMakeLists.txt  tracer_configuration.schema.json
zipkin_opentracing/example/: CMakeLists.txt  text_map_carrier.h  tutorial.cc
zipkin_opentracing/include/zipkin/: opentracing.h
zipkin_opentracing/src/: dynamic_load.cc  opentracing.cc  propagation.cc  propagation.h  sampling.cc  sampling.h  tracer_factory.cc  tracer_factory.h  utility.cc  utility.h
zipkin_opentracing/test/: CMakeLists.txt  in_memory_reporter.h  ot_tracer_factory_test.cc  ot_tracer_test.cc  tracer_test.cc
